chore: material 3 icons and status bar contrast

--- a/fms_options.yaml
+++ b/fms_options.yaml
@@ -15,3 +15,13 @@ symbols:
     library_filled:
         name: Library Books
         fill: true
+
+    search_outlined:
+        name: Search
+    search_filled:
+        name: Search
+        fill: true
+
+default:
+  style: rounded
+  weight: 500
