--- a/fms_options.yaml
+++ b/fms_options.yaml
@@ -22,6 +22,13 @@ symbols:
         name: Search
         fill: true
 
+    person_filled:
+        name: Person
+        fill: true
+        
+    more_vert:
+        name: More Vert
+
 default:
   style: rounded
   weight: 500
