--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     flutter:
         sdk: flutter
 
+    animations: ^2.0.7
     dynamic_color: ^1.5.4
     json_annotation: ^4.7.0
 
