--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     animations: ^2.0.7
     dynamic_color: ^1.5.4
     json_annotation: ^4.7.0
+    http: ^0.13.5
 
     isar: *isar_version
     isar_flutter_libs: *isar_version
