feat: isar bindings and fixtures to the dex responses

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,3 +1,5 @@
 include: package:flutter_lints/flutter.yaml
 linter:
-  rules:
+    rules:
+      prefer_single_quotes: false
+      prefer_double_quotes: true
