--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,8 +3,6 @@ description: Cross-platform mobile client for MangaDex
 version: 1.0.0+1
 publish_to: "none"
 
-isar_version: &isar_version ^3.0.5
-
 environment:
     sdk: ">=2.18.6 <3.0.0"
 
@@ -15,12 +13,12 @@ dependencies:
     animations: ^2.0.7
     dynamic_color: ^1.5.4
     json_annotation: ^4.7.0
-    
+
     http: ^0.13.5
     path_provider: ^2.0.11
 
-    isar: *isar_version
-    isar_flutter_libs: *isar_version
+    isar: ^3.0.5
+    isar_flutter_libs: ^3.0.5
 
     hive: ^2.2.3
     hive_flutter: ^1.1.0
@@ -28,11 +26,14 @@ dependencies:
     flutter_riverpod: ^2.1.3
 
 dev_dependencies:
+    flutter_test:
+        sdk: flutter
+
     flutter_lints: ^2.0.0
     build_runner: ^2.3.3
     json_serializable: ^6.5.4
 
-    isar_generator: *isar_version
+    isar_generator: ^3.0.5
     hive_generator: ^2.0.0
 
     # Temporary Material Symbols support
