feat: removed json_serializable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,22 @@
 		}
 	],
 	"cSpell.words": [
+		"doujinshi",
+		"fantia",
+		"josei",
 		"mangadex",
+		"naver",
+		"nico",
+		"pixiv",
+		"preserialization",
 		"riba",
 		"riverpod",
-		"scanlation"
+		"scanlation",
+		"seinen",
+		"shoujo",
+		"shounen",
+		"skeb",
+		"weibo"
 	],
 	"editor.codeActionsOnSave": {
 		"source.fixAll": true
