--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     animations: ^2.0.7
     dynamic_color: ^1.5.4
     logging: ^1.1.0
+    package_info_plus: ^3.0.2
 
     http: ^0.13.5
     path_provider: ^2.0.11
