--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     dynamic_color: ^1.5.4
     url_launcher: ^6.1.9
     google_fonts: ^4.0.3
+    intl: ^0.18.0
 
     logging: ^1.1.0
 
@@ -28,6 +29,7 @@ dependencies:
 
     fl_chart: ^0.61.0
     package_info_plus: ^3.0.2
+    dash_flags: ^0.0.4
 
 dev_dependencies:
     flutter_test:
