--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     fl_chart: ^0.61.0
     package_info_plus: ^3.0.2
     dash_flags: ^0.0.4
+    meta: ^1.8.0
 
 dev_dependencies:
     flutter_test:
