--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     package_info_plus: ^3.0.2
     dash_flags: ^0.0.4
     meta: ^1.8.0
+    json_annotation: ^4.8.0
 
 dev_dependencies:
     flutter_test:
@@ -43,6 +44,7 @@ dev_dependencies:
     hive_generator: ^2.0.0
 
     flutter_launcher_icons: "^0.12.0"
+    json_serializable: ^6.6.1
 
 flutter:
     uses-material-design: true
