fix: temporary stale preferredCoverId after changing cover from sheet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,7 @@
 	// Dart Auto Generated Files
 	"explorer.fileNesting.enabled": true,
 	"explorer.fileNesting.patterns": {
-		"*.dart": "${capture}.g.dart"
+		"*.dart": "${capture}.*.dart"
 	},
 	"cSpell.words": [
 		"curstantine",
