--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     dash_flags: ^0.0.4
     meta: ^1.8.0
     json_annotation: ^4.8.0
-    freezed: ^2.3.2
+    freezed_annotation: ^2.2.0
 
 dev_dependencies:
     flutter_test:
@@ -46,6 +46,7 @@ dev_dependencies:
 
     flutter_launcher_icons: "^0.12.0"
     json_serializable: ^6.6.1
+    freezed: ^2.3.2
 
 flutter:
     uses-material-design: true
