chore: update readme and removed ios build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,9 @@
 	"explorer.fileNesting.patterns": {
 		"*.dart": "${capture}.*.dart"
 	},
+	"files.exclude": {
+		"build/": true,
+	},
 	"cSpell.words": [
 		"curstantine",
 		"deduped",
