--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,9 @@
 	},
 	"files.exclude": {
 		"build/": true,
+		".dart_tool/": true,
+		".flutter-plugins": true,
+		".flutter-plugins-dependencies": true,
 	},
 	"cSpell.words": [
 		"curstantine",
