--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,42 +7,32 @@ environment:
     sdk: ">=2.18.6 <3.0.0"
 
 dependencies:
+    animations: ^2.0.7
+    dash_flags: ^0.1.1
+    dynamic_color: ^1.6.5
+    fl_chart: ^0.62.0
     flutter:
         sdk: flutter
-
-    animations: ^2.0.7
-    dynamic_color: ^1.5.4
-    url_launcher: ^6.1.9
-    google_fonts: ^4.0.3
-    intl: ^0.18.0
-
-    logging: ^1.1.0
-
-    http: ^0.13.5
-    path_provider: ^2.0.11
-
-    isar: ^3.0.5
-    isar_flutter_libs: ^3.0.5
-
-    fl_chart: ^0.61.0
-    package_info_plus: ^3.0.2
-    dash_flags: ^0.0.4
-    meta: ^1.8.0
-    json_annotation: ^4.8.0
-    freezed_annotation: ^2.2.0
+    google_fonts: ^4.0.4
+    http: ^0.13.6
+    intl: ^0.18.1
+    isar: ^3.1.0+1
+    isar_flutter_libs: ^3.1.0+1
+    json_annotation: ^4.8.1
+    logging: ^1.1.1
+    meta: ^1.9.1
+    package_info_plus: ^4.0.0
+    path_provider: ^2.0.15
+    url_launcher: ^6.1.11
 
 dev_dependencies:
+    build_runner: ^2.4.4
+    flutter_launcher_icons: ^0.13.1
+    flutter_lints: ^2.0.1
     flutter_test:
         sdk: flutter
-
-    flutter_lints: ^2.0.0
-    build_runner: ^2.3.3
-
-    isar_generator: ^3.0.5
-
-    flutter_launcher_icons: "^0.12.0"
-    json_serializable: ^6.6.1
-    freezed: ^2.3.2
+    isar_generator: ^3.1.0+1
+    json_serializable: ^6.6.2
 
 flutter:
     uses-material-design: true
