--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
     animations: ^2.0.7
+    copy_with_extension: ^5.0.2
     dash_flags: ^0.1.1
     dynamic_color: ^1.6.5
     fl_chart: ^0.62.0
@@ -27,6 +28,7 @@ dependencies:
 
 dev_dependencies:
     build_runner: ^2.4.4
+    copy_with_extension_gen: ^5.0.2
     flutter_launcher_icons: ^0.13.1
     flutter_lints: ^2.0.1
     flutter_test:
