feat: debouncing support for search loader

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
 	},
 	"cSpell.words": [
 		"curstantine",
+		"debouncer",
 		"deduped",
 		"doujinshi",
 		"fantia",
@@ -60,6 +61,7 @@
 		"riba",
 		"riverpod",
 		"roboto",
+		"rxdart",
 		"scanlation",
 		"seinen",
 		"Serde",
