--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     isar_flutter_libs: ^3.1.0+1
     json_annotation: ^4.8.1
     logging: ^1.1.1
+    material_symbols_icons: ^4.2661.1
     meta: ^1.9.1
     package_info_plus: ^4.0.0
     path_provider: ^2.0.15
