chore: removed prettier and added dprint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-	"editor.rulers": [
-		100,
-	],
+	"editor.rulers": [100],
 	"editor.tabSize": 4,
 	"editor.formatOnSave": true,
 	"editor.indentSize": "tabSize",
@@ -9,30 +7,31 @@
 	"editor.insertSpaces": false,
 	"editor.codeActionsOnSave": {
 		"source.fixAll": true,
-		"source.organizeImports": true,
+		"source.organizeImports": true
 	},
+
 	// Disable Dart Formatter
 	"dart.enableSdkFormatter": false,
-	"dart.lineLength": 100,
 	// Dart-Code extension sets language-specific settings.
 	// Ref: https://github.com/Dart-Code/Dart-Code/blob/0f22ea3c770950702add7d629433f4f011bd9069/package.json#L1362
 	"[dart]": {
 		"editor.tabSize": 4,
-		"editor.insertSpaces": false,
+		"editor.insertSpaces": false
 	},
-	// Prettier Settings for files outside of Dart
-	"prettier.tabWidth": 4,
-	"prettier.useTabs": true,
-	"prettier.printWidth": 100,
-	"editor.defaultFormatter": "esbenp.prettier-vscode",
+
+	// Dart Settings for files outside of Dart
+	"editor.defaultFormatter": "dprint.dprint",
+
 	// XML Tools Settings
 	"xmlTools.enforcePrettySelfClosingTagOnFormat": true,
 	"xmlTools.splitAttributesOnFormat": true,
 	"xmlTools.splitXmlnsOnFormat": true,
+
 	// Licenser Settings
 	"licenser.author": "Curstantine",
 	"licenser.license": "GPLv3",
 	"licenser.disableAutoHeaderInsertion": true,
+
 	// Dart Auto Generated Files
 	"explorer.fileNesting.enabled": true,
 	"explorer.fileNesting.patterns": {
@@ -42,8 +41,9 @@
 		"build/": true,
 		".dart_tool/": true,
 		".flutter-plugins": true,
-		".flutter-plugins-dependencies": true,
+		".flutter-plugins-dependencies": true
 	},
+
 	"cSpell.words": [
 		"Checkmark",
 		"curstantine",
@@ -73,5 +73,5 @@
 		"vsync",
 		"weibo",
 		"Zoomable"
-	],
+	]
 }
